# liquid-graph-time-constant-network

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  TODO.md  pyproject.toml
.serena/: project.yml
docs/: flocking_implementation_plan.md
driving_results/: comparison_results.json
notebooks/: plot_erros.py
scripts/: compare_robustness.py  eval_grid.py  evaluate_corruption_robustness.py  evaluate_driving.py  evaluate_noise_robustness.py  extract_features.py  generate_attention_video.py  rollout.py  train.py  train_driving.py
src/configs/: __init__.py  corruption.py
src/core/layers/: __init__.py  cfgcn_layer.py  graph_filter.py  lgtcn_layer.py  ltcn_layer.py  ngode_layer.py  node_layer.py  revised_cfgcn_layer.py
src/core/models/: __init__.py  cfgcn_controller.py  lgtcn_controller.py  ltcn_controller.py  ngode_controller.py  node_controller.py
src/data/: __init__.py  hdd_loader.py
src/data_models/: __init__.py  stability_metrics.py
src/driving/: data.py  engine.py  evaluate.py  run.py  run_ode.py
src/flocking/: __init__.py  data.py  engine.py  environment.py  models.py  run.py
src/layers/: cfgcn_layer.py  lgtcn_layer.py  ltcn_layer.py
src/lgtcn/: __init__.py  main.py
src/lgtcn/driving_results/: training_info.json
src/lgtcn/layers/: __init__.py  cfgcn_layer.py  graph_filter.py  lgtcn_layer.py  ltcn_layer.py
src/lgtcn/models/: __init__.py  controller.py  lgtcn_controller.py  ltcn_controller.py
src/lgtcn/tasks/: __init__.py  autonomous_driving.py  stability_analysis.py
src/models/: lgtcn_controller.py  ltcn_controller.py
src/scripts/: compare_robustness.py  train_driving.py
src/tasks/: __init__.py  autonomous_driving.py  stability_analysis.py
src/types/: __init__ .py  corruption_config.py  stability_metrics.py
src/utils/: __init__.py  compute_s_powers.py  corrupt_frame.py  driving_dataset.py  graph.py  image_missing.py
test/: debug_gradients.py  test_flocking.py  test_layers.py  test_utils.py
(+2 files in other folders)
