[project]
name = "lgtcn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "satra-11", email = "syuzuki546@gmail.com" }
]
dependencies = [
    "torch>=2.7.1",
    "pytest>=8.4.1",
    "tqdm>=4.67.1",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.5",
    "cloudpickle>=3.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
