[project]
name = "lgtcn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "satra-11", email = "syuzuki546@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.5",
    "cloudpickle>=3.1.1",
    "torchvision>=0.23.0",
    "mlflow>=2.14.1",
    "torchdiffeq>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=8.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
mypy_path = "src"
